[project]
name = "dmslm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chroma>=0.2.0",
    "chromadb>=1.3.5",
    "fastapi[standard]>=0.121.2",
    "faster-whisper>=1.2.1",
    "mediapipe>=0.10.14",
    "numpy>=2.3.4",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.11.0.86",
    "piper-tts>=1.3.0",
    "pocketflow>=0.0.3",
    "requests>=2.32.5",
    "silero-vad",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
]

[tool.uv.sources]
silero-vad = { git = "https://github.com/snakers4/silero-vad.git" }
